--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Document</title>
 </head>
+
 <body>
   <div class="judul">
     <h1>Favorite Song's</h1>
@@ -17,28 +19,100 @@
   </div>
   <div class="p">
     <b>
-    <p>Whats Your Favorite Song's</p>
-    <p>Come on, take note your favorite song</p>
+      <p>Whats Your Favorite Song's</p>
+      <p>Come on, take note your favorite song</p>
     </b>
   </div>
   <div class="f">
     <form>
-      <div>
+      <div class="mf">
         <label>Music Favorite</label>
         <input type="text">
       </div>
-      <div>
+      <div class="mc">
         <label>Music Creator</label>
         <input type="text">
       </div>
       <div>
-        <label>Your Comment</label>
+        <label class="yc">Your Comment</label>
         <textarea name="" id="" cols="30" rows="10"></textarea>
       </div>
       <div>
-        <input type="submit">
+        <input class="sbm" type="submit" value="submit">
       </div>
     </form>
   </div>
+
+  <div class="tbl">
+    <table border="1">
+      <tr>
+        <th>
+          NO
+        </th>
+        <th>
+          Music
+        </th>
+        <th>
+          Creator
+        </th>
+        <th>
+          Your Comment
+        </th>
+      </tr>
+      <tr>
+        <td>
+          1
+        </td>
+        <td>
+          Happiness
+        </td>
+        <td>
+          Rex Orange Country
+        </td>
+        <td>
+          ksksk
+        </td>
+      </tr>
+      <tr>
+        <td>
+          2
+        </td>
+        <td>
+          Drunk Text
+        </td>
+        <td>
+          Henry Moodie
+        </td>
+        <td>
+          ksksk
+        </td>
+      </tr>
+      <tr>
+        <td>
+          3
+        </td>
+        <td>
+          Somebody's Pleasure
+        </td>
+        <td>
+          Aziz Hedra
+        </td>
+        <td>
+          ksksk
+        </td>
+      </tr>
+    </table>
+  </div>
+  <div class="ps">
+    <p>List Fav Song</p>
+  </div>
+  <div class="list">
+    <ol>
+      <li>Happiness</li>
+      <li>Drunk Text</li>
+      <li>Somebody's Pleasure</li>
+    </ol>
+  </div>
 </body>
+
 </html>
